Improve bad input handling in resolveLSID